tests/typing/bad/extra-new2.scala
class A {
    def m() { var b : Int = new Int() }
}
object Main { def main(args: Array[String]) { } }
